paper statement print

--- a/app/report/views/reportPrint.html
+++ b/app/report/views/reportPrint.html
@@ -4,4 +4,4 @@ report print  {{reportName}}
 <summernote ng-model="htmlContent" height="300"></summernote>
 
 
-<button type="button" ng-click="printDocument()" class="btn">Hello Someone</button>
+<button type="button" ng-click="reportCtrl.printDocument()" class="btn">Hello Someone</button>
