create template for report

--- a/app/home/views/topNavigationBar.html
+++ b/app/home/views/topNavigationBar.html
@@ -18,7 +18,8 @@
 
           <ul class="nav navbar-nav">
             <li class="active"> <a ui-sref="main.home" ui-sref-active="active">home</a></li>
-            <li><a ui-sref="main.about" ui-sref-active="active">About</a></li> </ul>
+            <li><a ui-sref="main.report" ui-sref-active="">Report</a></li> 
+            <li><a ui-sref="main.about" ui-sref-active="">About</a></li> </ul>
             <div style="float: right;margin-top: 10px;padding-right:10px;">
               <p><a href="#!/login" class="btn btn-primary">Logout</a></p>      </div>
           </div>
