--- a/app/report/views/sampleReport.html
+++ b/app/report/views/sampleReport.html
@@ -1,32 +1,174 @@
-<html>
-<head>
-</head>
-<body>
-    <p align="right"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Date: 02-01-2018</strong></span></span></p>
-    <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>To</strong></span></span></p>
-    <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> The Managing Director,</span></span></p>
-    <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Tamil Nadu Text Book &amp; Educational Service Corporation,</span></span></p>
-    <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> E.V.K. Sampth Building,</span></span></p>
-    <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> DPI Campus,</span></span></p>
-    <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Chennai &ndash; 6.</span></span></p>
-    <p align="right">&nbsp;</p>
-    <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Respected Sir,</strong></span></span></p>
-    <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Sub:</strong></span></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Final payment for </span></span><span style="font-family: 'Times New Roman', serif;"><strong>P.O.NO: 862. Others 10</strong></span><sup><span style="font-family: 'Times New Roman', serif;"><strong>th </strong></span></sup><span style="font-family: 'Times New Roman', serif;"><strong>Science ADW Spl Guide T/M Free copies 23,643</strong></span></p>
-    <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">We have delivered for </span></span><span style="font-family: 'Times New Roman', serif;"><strong>P.O.NO: 862. Others 10</strong></span><sup><span style="font-family: 'Times New Roman', serif;"><strong>th </strong></span></sup><span style="font-family: 'Times New Roman', serif;"><strong>Science ADW Spl Guide T/M Free copies 23,643.Date: 16.08.2017.</strong></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> We are received for part payment 80%. Now we are applying for final payment. All final payment document copies are enclosed. With this letter, please arrange the payment.</span></span></p>
-    <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Thanking You</span></span></p>
-    <p align="right"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Yours faithfully,</span></span></p>
-    <p align="justify">&nbsp;<span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Enclosure:</span></span></p>
-    <ol>
-    <li><span style="font-family: 'Times New Roman', serif;">Print order Xerox copy</span></li>
-    <li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft issue voucher Xerox</span></li>
-    <li><span style="font-family: 'Times New Roman', serif;">Stamp Receipt</span></li>
-    <li><span style="font-family: 'Times New Roman', serif;">Part payment voucher Xerox</span></li>
-    <li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft Consumption Statement</span></li>
-    <li><span style="font-family: 'Times New Roman', serif;">Inward / Out ward original</span></li>
-    <li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Plate effacement Certificate</span></span></li>
-    <li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Part Payment Invoice</span></span></li>
-    </ol>
+<p align="center">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;">
+            <u>
+                <strong>INVOICE</strong>
+            </u>
+        </span>
+    </span>
+</p>
+<p align="right">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;">
 
-</body>
+            <strong>Invoice No: 65</strong>
 
-</html>
+        </span>
+    </span>
+</p>
+<p align="right">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;">
+
+            <strong>Date: 02-01-2018</strong>
+        </span>
+    </span>
+</p>
+<p align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;">
+            <strong>To</strong>
+        </span>
+    </span>
+</p>
+<p style="padding-left: 30px;" align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;"> The Managing Director,</span>
+    </span>
+</p>
+<p style="padding-left: 30px;" align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;"> Tamil Nadu Text Book &amp; Educational Service Corporation,</span>
+    </span>
+</p>
+<p style="padding-left: 30px;" align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;"> E.V.K. Sampth Building,</span>
+    </span>
+</p>
+<p style="padding-left: 30px;" align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;"> DPI Campus,</span>
+    </span>
+</p>
+<p style="padding-left: 30px;" align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;">Chennai &ndash; 6.</span>
+    </span>
+</p>
+<p align="right">&nbsp;</p>
+<p align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;">
+            <strong>Respected Sir,</strong>
+        </span>
+    </span>
+</p>
+<p align="justify">
+    <span style="font-family: 'Times New Roman', serif;">
+        <span style="font-size: medium;">
+            <strong>Subject:</strong> Invoice &ndash; Reg
+        </span>
+    </span>
+
+    <p>
+        <strong>Ref. P.O.NO: 19, Date: 20.11.2017</strong>
+    </p>
+</p>
+
+<div class="invoice-box">
+
+    <table cellpadding="0" cellspacing="0" width="99%">
+        <thead>
+            <tr class="heading" style="outline: thin solid">
+                <td width="40%">
+                    Particulars
+                </td>
+                <td width="20%">
+                    Qty
+                </td>
+                <td width="20%">
+                    Rate (Rs)
+                </td>
+                <td width="20%">
+                    Total Amount
+                </td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+
+                    <p>To the printing charge for P.O.NO:19. 10th Std Social Science E/M Free copies 1,15,000
+                    </p>
+
+                </td>
+                <td rowspan="3" style="vertical-align:middle;" align="justify">
+
+                    <p>1,15,000 Copies</p>
+                </td>
+                <td>
+
+                    <p>Per 1000 Copies 10,250/-</p>
+                </td>
+                <td>
+
+                    <p>11,78,750</p>
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+
+
+                    <p>To the book Transport charge.</p>
+
+                </td>
+
+                <td>
+
+
+                </td>
+                <td>
+
+                    <p>60,000</p>
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+
+
+                    <p>To the Kraft usage</p>
+                    191x117CM
+                    <p>48KG 90 GSM</p>
+
+                </td>
+
+                <td>
+
+
+                </td>
+                <td>
+                    <p>15 000</p>
+                </td>
+            </tr>
+            <tr >
+                <td colspan="2"></td>
+                
+                 <td><strong>Total:</strong></td>
+                <td>
+                        <strong>  12, 53,750 </strong>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <br>
+    <p>
+        <strong>In words: Twelve lakh fifty three thousand seven hundred and fifty only /-</strong>
+    </p>
+</div>
+<br>
