--- a/app/report/views/directFinalInvoice.html
+++ b/app/report/views/directFinalInvoice.html
@@ -76,7 +76,7 @@
                 </span>
             
                 <p>
-                    <strong>Ref. P.O.NO: 19, Date: 20.11.2017</strong>
+                    <strong>Ref. P.O.NO: {{reportCtrl.order.printOrderNumber}}, Date: 20.11.2017</strong>
                 </p>
             </p>
             
@@ -103,7 +103,7 @@
                         <tr>
                             <td>
             
-                                <p>To the printing charge for P.O.NO:19. 10th Std Social Science E/M Free copies 1,15,000
+                                <p>To the printing charge for P.O.NO:{{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.paymentType}} {{reportCtrl.order.bookNoOfCopies}}
                                 </p>
             
                             </td>
