--- a/app/report/views/paperStatement.html
+++ b/app/report/views/paperStatement.html
@@ -67,14 +67,14 @@
                                 <span style="font-size: medium;"> Std. Term 3 Vol 1 (Tamil&nbsp;</span>
                             </span>
                             <span style="font-family: 'Times New Roman', serif;">
-                                <span style="font-size: medium;">&amp; English) T/M free copies</span>
+                                <span style="font-size: medium;">&amp; English) T/M {{reportCtrl.order.paymentType}}</span>
                             </span>
                         </p>
                     </td>
                     <td style="width: 372px;">
                         <p>
                             <span style="font-family: 'Times New Roman', serif;">
-                                <span style="font-size: medium;">Size: A4 No. of copies 3, 08,400</span>
+                                <span style="font-size: medium;">Size: A4 No. of copies {{reportCtrl.order.bookNoOfCopies}}</span>
                             </span>
                         </p>
                         &nbsp;</td>
