--- a/app/report/views/partPaymentCover.html
+++ b/app/report/views/partPaymentCover.html
@@ -1,6 +1,11 @@
 <button  pdf-save-button="idpartPaymentCover" pdf-name="someone.pdf"  class="btn">Print</button>
-
+</br>
 <div pdf-save-content="idpartPaymentCover" width="100%">
+        <p><strong>TIN: 33515265165&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cell: 9842182251</strong></p>
+        <p><strong>CST: 804833/01/05/2012</strong></p>
+        <p><strong>ARUL ACHAGAM OFFSET PRINTERS</strong></p>
+        <p><strong>208/2j1, Mottanampatti Road, Near MGR Nagar,</strong></p>
+        <p><strong>Mettupatti, Begambur (Po), Dindigul &ndash; 624002.</strong></p>
 <p align="right"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Date: {{ printBillingDate | date : 'dd.MM.y' }}</strong></span></span></p>
 <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>To</strong></span></span></p>
 <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> The Managing Director,</span></span></p>
@@ -10,19 +15,19 @@
 <p style="padding-left: 30px;" align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Chennai &ndash; 6.</span></span></p>
 <p align="right">&nbsp;</p>
 <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Respected Sir,</strong></span></span></p>
-<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Sub:</strong></span></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Part payment for </span></span><span style="font-family: 'Times New Roman', serif;"><strong>P.O.NO: {{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.paymentType}} 23,643</strong></span></p>
-<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">We have delivered<strong> P.O.NO:{{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.paymentType}} {{reportCtrl.order.bookNoOfCopies}}. Date: 20.11.2017.</strong> Now we are applying for part payment 80%. All part payment Document copies are enclosed. With this letter, please arrange the payment.</span></span></p>
+<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Sub:</strong></span></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Part payment for </span></span><span style="font-family: 'Times New Roman', serif;"><strong>P.O.NO: {{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies | INRCOPIES}}</strong></span></p>
+<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">We have delivered<strong> P.O.NO:{{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies | INRCOPIES}}. Date: {{ reportCtrl.order.printOrderDate | date : 'dd.MM.y' }}.</strong> Now we are applying for part payment 80%. All part payment Document copies are enclosed. With this letter, please arrange the payment.</span></span></p>
 <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Thanking You</span></span></p>
 <p align="right"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Yours faithfully,</span></span></p>
 <p align="justify">&nbsp;<span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Enclosure:</span></span></p>
 <ol>
 <li><span style="font-family: 'Times New Roman', serif;">Print order Xerox copy</span></li>
-<li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft issue voucher Xerox</span></li>
-<li><span style="font-family: 'Times New Roman', serif;">Stamp Receipt</span></li>
-<li><span style="font-family: 'Times New Roman', serif;">Part payment voucher Xerox</span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Original BRV’S 56 (DC) Nos.</span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft issue voucher</span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Advanced Stamp Receipt</span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Invoice 1+2 Copies</span></li>
 <li><span style="font-family: 'Times New Roman', serif;">Paper/Board/Kraft Consumption Statement</span></li>
-<li><span style="font-family: 'Times New Roman', serif;">Inward / Out ward original</span></li>
-<li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Plate effacement Certificate</span></span></li>
-<li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Part Payment Invoice</span></span></li>
+<li><span style="font-family: 'Times New Roman', serif;">Sample Book 6 Nos.</span></li>
+<li><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">TNPL Paper invoice</span></span></li>
 </ol>
 </div>
